[tool.poetry]
name = "brokerscore"
version = "0.1.2"
description = "Meso level network measure pbroker score as defined by Paquet-Clouston and Bouchard"
authors = ["Guy <guywiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tulip-python = "5.7.2"
igraph = "0.10"
leidenalg = "0.10"
networkx = "^3.2.1"
numpy = "^1.26"

[tool.poetry.group.dev.dependencies]
pandas = "^2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
